Fix overlapping sideboxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a {
 
 header {
     border-bottom: 1px solid var(--borders);
-    height: 100px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,7 +62,7 @@ header {
 
 footer {
     border-top: 1px solid var(--borders);
-    height: 100px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -178,7 +178,7 @@ main {
 
 #side-menu {
     position: absolute;
-    top: 110px;
+    top: 70px;
     display: none;
     justify-content: space-between;
     width: 600px;
